--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -23,7 +23,7 @@ header {
 }
 
 .header-area {    
-    height: 112px;
+    height: 102px;
     display: flex;
     justify-content: space-between;
     align-items: center;
@@ -45,7 +45,7 @@ header {
 .header-right input {
     outline: none;
     border: 1px solid #b3b3b3;
-    padding: 8.5px 10px;
+    padding: 7.1px 10px;
     width: 100%;
     max-width: 260px;
     font-size: 0.9em;
@@ -73,4 +73,39 @@ header {
 .header-right .menu-toggle img {
     width: 24px;
     margin-left: 57px;
+}
+
+/***************************************************************
+*                           BANNER #1
+****************************************************************/
+.banner {
+    background-position: center;
+    background-size: cover;
+}
+.banner-top {
+    background-image: url(../images/bg.jpg);
+}
+.banner-top .body {
+    max-width: 600px;
+    padding: 65px 0;
+}
+.banner-top h1 {
+    font-size: 5.8rem;
+    font-family: 'Oswald', sans-serif;
+    margin: 0;
+    line-height: 1.1;
+}
+.banner-top p {
+    margin: 45px 0;
+}
+.banner-top .thumbs{
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+}
+.banner-top .thumbs img {
+    width: 160px;
+    border: 6px solid #117050;
+    border-radius: 50%;
+    margin: 24px 18px;
 }
