--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,5 +1,8 @@
 @import url('https://fonts.googleapis.com/css2?family=Open+Sans:ital,wght@0,400;0,700;1,400;1,700&family=Oswald:wght@400;700&display=swap');
 
+/***************************************************************
+*                           DEFAULTS
+****************************************************************/
 * {
     font-family: 'Open Sans', sans-serif;
     box-sizing: border-box;
@@ -13,6 +16,41 @@ body {
 .container {
     max-width: 1140px;
     margin: 0 auto;
+}
+
+h1 {
+    font-size: 5.8rem;
+    font-family: 'Oswald', sans-serif;
+    margin: 0;
+    line-height: 1.1;
+}
+h2 {
+    font-size: 2.2rem;
+    font-family: 'Oswald', sans-serif;
+    margin: 15px 0;
+    line-height: 1.1;
+}
+
+.btn {
+    display: inline-block;
+    border: 2px solid #117050;
+    background-color: #FFF;
+    border-radius: 3px;
+    color: inherit;
+    text-decoration: none;
+    padding: 10px 30px;
+    margin-top: 30px;
+}
+.btn:hover {
+    background-color: #454545;
+    color: #FFF;
+    border-color: transparent;
+}
+
+.separator {
+    width: 106px;
+    height: 22px;
+    background-color: #117050;
 }
 
 /***************************************************************
@@ -89,12 +127,6 @@ header {
     max-width: 600px;
     padding: 65px 0;
 }
-.banner-top h1 {
-    font-size: 5.8rem;
-    font-family: 'Oswald', sans-serif;
-    margin: 0;
-    line-height: 1.1;
-}
 .banner-top p {
     margin: 45px 0;
 }
@@ -108,4 +140,38 @@ header {
     border: 6px solid #117050;
     border-radius: 50%;
     margin: 24px 18px;
+}
+
+/***************************************************************
+*                           CONTENT #1
+****************************************************************/
+.content {
+    display: grid;
+    grid-template-columns: repeat(2, 1fr);
+}
+.content p {
+    margin-top: 35px;
+}
+
+.content-left .content-text {
+    padding: 40px 0;
+    padding-right: 50px;
+    grid-column: 1 / 2;
+    max-width:570px;
+    margin-left: auto;
+}
+.content-left .content-partial {
+    grid-column: 1 / 2;
+    grid-row: 2 / 3;
+    background-image: url(../images/f2.jpg);
+    background-position: center;
+    background-size: cover;
+    height: 350px;
+}
+.content-left .content-image {
+    grid-column: 2 / 3;
+    grid-row: 1 / span 2;
+    background-image: url(../images/f1.jpg);
+    background-position: center;
+    background-size: cover;
 }
