--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -34,7 +34,7 @@ h2 {
 .btn {
     display: inline-block;
     border: 2px solid #117050;
-    background-color: #FFF;
+    background-color: transparent;
     border-radius: 3px;
     color: inherit;
     text-decoration: none;
@@ -161,14 +161,16 @@ header {
     max-width:570px;
     margin-left: auto;
 }
+
 .content-left .content-partial {
     grid-column: 1 / 2;
     grid-row: 2 / 3;
     background-image: url(../images/f2.jpg);
     background-position: center;
     background-size: cover;
-    height: 350px;
+    height: 450px;
 }
+
 .content-left .content-image {
     grid-column: 2 / 3;
     grid-row: 1 / span 2;
@@ -187,14 +189,16 @@ header {
     max-width:570px;
     margin-right: auto;
 }
+
 .content-right .content-partial {
     grid-column: 2 / 3;
     grid-row: 2 / 3;
     background-image: url(../images/f4.jpg);
     background-position: center;
     background-size: cover;
-    height: 350px;
+    height: 450px;
 }
+
 .content-right .content-image {
     grid-column: 1 / 2;
     grid-row: 1 / span 2;
@@ -276,4 +280,105 @@ footer .container {
     flex-direction: column;
     align-items: center;
     justify-content: space-between;
+}
+
+/***************************************************************
+*                           RESPONSIVE
+****************************************************************/
+@media (max-width: 1140px) {
+    .container {
+        padding: 0 20px;
+    }
+
+    .content-left .content-text {
+        padding: 40px 50px 40px 20px;
+    }
+
+    .content-right .content-text {
+        padding: 40px 20px 40px 50px;
+    }
+}
+
+@media (max-width: 830px) {
+    .content-left {
+        grid-template-columns: 4fr 2fr;
+    }
+    .content-left#new-caramel .text-bg {
+        background-position: left;
+        background-size: cover;
+    }
+    .content-left#kindness {
+        grid-template-columns: 3fr 4fr;
+    }
+
+    .content-right {
+        grid-template-columns: 2fr 4fr;
+    }
+}
+
+@media (max-width: 630px) {
+    h1 {
+        font-size: 5rem;
+    }
+    .banner-top .thumbs img {
+        width: 100px;
+    }
+}
+@media (max-width: 450px) {
+    h1 {
+        font-size: 4rem;
+    }
+
+    .header-right .menu-toggle img {
+        margin-left: 30px;
+    }
+    .header-right form input {
+        margin-left: 10px;
+    }
+
+    .banner-top .thumbs img {
+        width: 80px;
+        border: 4px solid #117050;
+    }
+
+    .content-left,
+    .content-right {
+        grid-template-columns: 1fr;
+    }
+
+    .content-left .content-text,
+    .content-right .content-text {
+        padding: 40px 15px;
+    }
+
+    .content-left .content-partial {
+        height: 300px;
+    }
+
+    .content-left#new-caramel .content-text {
+        margin: 50px 0;
+    }
+
+    .content-left#kindness {
+        grid-template-columns: 1fr;
+    }
+    .content-left#kindness .content-text {
+        margin: 40px 0;
+        width: 100%;
+        max-width: 100%;
+    }
+
+    footer {
+        padding: 0 20px;
+    }
+}
+@media (max-width: 350px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    .banner-top .thumbs img {
+        width: 50px;
+        border: 2px solid #117050;
+    }
 }
